<resources>
    <string name="app_name">FoxFire</string>
    <string name="login">login</string>
    <string name="user_password">User Password</string>
    <string name="user_name">User Name</string>
    <string name="GOOGLE_MAP_API">AIzaSyCmuFA9a43sIYFMFAuUCIGk6-gyPpN6lBo</string>
    <string name="speed">Speed: </string>
    <string name="settings">Settings</string>
    <string name="desc">desc</string>
    <string name="search">Search</string>
    <string name="where_do_you_want_to_go">Where do you wanna go?</string>
    <string name="your_passcode">Your Passcode</string>
    <string name="dlt">DLT</string>
    <string name="ok">ok</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_out">Log out</string>
    <string name="start_Moniter">start_Moniter</string>
    <string name="stop_Moniter">stop_Moniter</string>
</resources>
